--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -40,7 +40,7 @@
 	<distributionManagement>
         <repository>
             <id>nexus</id>
-            <url>http://localhost:8081/repository/maven-releases/</url>
+            <url>http://56.228.25.88:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 
