--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>rest-service-complete</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>rest-service-complete</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
