--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
 # Add the jar file
-COPY target/rest-service-complete-0.0.1.jar app.jar
+COPY target/rest-service-complete-0.0.1-SNAPSHOT.jar app.jar
 
 # Run the jar file
 ENTRYPOINT ["java", "-jar", "app.jar"]
